--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,3 +1,5 @@
+{% extends 'authentication/base.html' %}
+
 {% block content %}
 
 {% if form.errors %}
@@ -27,7 +29,7 @@
 </table>
 
 <input type="submit" value="login" />
-<input type="hidden" name="next" value="/authentication"/>
+<input type="hidden" name="next" value="/containers"/>
 </form>
 
 {% endblock %}
