--- a/containers/templates/containers/index.html
+++ b/containers/templates/containers/index.html
@@ -2,4 +2,9 @@
 
 {% block content %}
 	This will show the list of containers
+	<br>
+	<a href="{% url 'create' %}">Create a container</a>
+
+
+
 {% endblock %}
