--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -29,7 +29,9 @@
 </table>
 
 <input type="submit" value="login" />
+<a href="{% url 'signUp' %}">Sign Up</a>
 <input type="hidden" name="next" value="/containers"/>
+
 </form>
 
 {% endblock %}
