--- a/containers/templates/containers/index.html
+++ b/containers/templates/containers/index.html
@@ -3,6 +3,10 @@
 {% block content %}
 	This will show the list of containers
 	<br>
+	{% for c in containers %}
+    {{ c.containerName }}
+	{% endfor %}
+	<br>
 	<a href="{% url 'create' %}">Create a container</a>
 
 
