--- a/containers/templates/containers/index.html
+++ b/containers/templates/containers/index.html
@@ -21,8 +21,14 @@
 		</tr>
 		{% endfor %}
 	</table>
-	
-    
+	<form method="post" action="{% url 'index' %}">
+      <p>Test</p>
+      Username: 
+      <input type="text" name="username"><br>
+     
+	  <input type="submit" value="dsqfmklj" /><br>
+  	</form> 
+
     <br>
 	
 	<br>
