--- a/containers/templates/containers/create.html
+++ b/containers/templates/containers/create.html
@@ -3,8 +3,8 @@
 {% block content %}
 
   <form method="post" action="{% url 'create'%}">
-    <input type="text" name="containerName">
-    <select name="containerType">
+    <input type="text" name="name">
+    <select name="type">
     	<option>C development</option>
     	<option>Java development</option>
     	<option>Big data development</option>
